# py-lmdb

./: .gitignore  .gitlab-ci.yml  .runtests-travisci.sh  .runtests-ubuntu-12-04.sh  .travis.install.sh  .travis.yml  CLAUDE.md  ChangeLog  FREE_THREADING.md  MANIFEST.in  README.md  README.rst  appveyor.yml  lmdb.c  lmdb.py  lmdb.pyx  lmdb_test.py  pyproject.toml  pyrightconfig.json  requirements-typecheck.txt  requirements.txt  runtests.sh  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: aarch64-debug.yml  python-package.yml  python-publish.yml
docs/: Makefile  conf.py  index.rst
docs/_templates/: searchbox.html
docs/_themes/really-default/static/: default.css_t
docs/themes/acid/: layout.html  sourcelink.html  theme.conf
docs/themes/acid/static/: acid.css
examples/: address-book.py  dirtybench-gdbm.py  dirtybench.py  nastybench.py  parabench.py
examples/keystore/: README.md  interfaces.py  lmdb.py  main.py  web.py  webapi.py
examples/keystore/static/: index.html
lib/: lmdb.h  mdb.c
lib/py-lmdb/: cursor-next-prev-uninitialized.patch  cve-2019-16224-validate-db-flags.patch  cve-2019-16225-reject-dirty-pages.patch  cve-2019-16226-validate-node-del-size.patch  cve-2019-16227-guard-xcursor-null.patch  cve-2019-16228-validate-psize.patch  disable-robust-mutex-aarch64.patch  env-copy-txn.patch  fix-large-write.patch  fix-overflow-page-size-mul.patch  fix-win-flush-large-write.patch  guard-xcursor-null-d3d4.patch  its-10346.patch  preload.h  validate-leaf2-keysize.patch  validate-md-depth.patch  validate-md-root.patch  validate-node-read-size.patch  validate-node-shrink-delta.patch  validate-nodedsz-cursor-put.patch  validate-nodedsz-page-split.patch  validate-overflow-pages.patch  validate-page-bounds.patch  validate-subpage-bounds.patch  validate-xcursor-nodedsz.patch  win32-sparse-file.patch
lib/win32/: inttypes.h
lmdb/: __init__.py  __init__.pyi  __main__.py  aio.py  aio.pyi  cffi.py  cpython.c  tool.py
lmdb_m/: __init__.py  __main__.py  _config.py  cffi.py  cpython.c  tool.py
misc/: cursor-del-break.c  cursor-iter-bug.c  cursor_put_pyparse.diff  cve-2019-16224-repro.c  cve-2019-16225-repro.c  cve-2019-16226-repro.c  cve-2019-16227-repro.c  cve-2019-16228-repro.c  fakelib.py  gdb.commands  helpers.sh  its7733.c  large-write-repro.c  large-write.md  overflow-page-size-mul.md  readers_mrb_env.patch  run_in_vm.py  runtests-travisci.sh  runtests-ubuntu-12-04.sh  test_monster_acid_trace.diff  upstream-bug-cve-2019-16224.md  win-flush-large-write-repro.c  win32-semaphore-lock.patch  windows_build.py  windows_setup.py
tests/: aio_test.py  crash_test.py  cursor_test.py  cve_test.py  env_test.py  equiv_dump.py  fork_test.py  getmulti_test.py  iteration_test.py  large_write_test.py  mdb_layout_test.py  overflow_test.py  package_test.py  stubtest_allowlist.txt  test_invariant_cpython.py  testlib.py  tool_test.py  txn_test.py
